less/power-players.less
@font-face {
    font-family: 'statefaceregular';
    src: url('../assets/fonts/stateface-regular-webfont.eot');
    src: url('../assets/fonts/stateface-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../assets/fonts/stateface-regular-webfont.woff') format('woff'),
         url('../assets/fonts/stateface-regular-webfont.ttf') format('truetype'),
         url('../assets/fonts/stateface-regular-webfont.svg#statefaceregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@darkGray: #484848;
@lightGray: #a6a6a6;

body {
    font: 16px/1.5em "Roboto", sans-serif;
    font-weight: 300;
    color: @darkGray;
    -webkit-font-smoothing: antialiased;
}

a,
a:link,
a:visited {
    color: #339da1;
    text-decoration: none;
}

a:hover, a:active {
    color: #278487;
    text-decoration: none;
}

header {
  background-color: transparent;
  h1 {
    text-align: center;
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: 700;
    a, a:link, a:visited {
      color: @darkGray;
    }
  }
  .pubdate {
    width: 100%;
    text-align: center;
    margin-bottom: 1em;
  }
}

.modal {
    position: absolute;
}

#content {
  margin-top: 0;
}

.stars3 {
  width: 100%;
  text-align: center;
  .star path.shape {
    fill: #EF9C57;
  }
}

.about-data-and-sources,
#intro-copy {
  margin: 20px 18%;
  width: 64%;
}

#select-a-state {
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
  float: left;
  margin-bottom: 40px;
  width: 100%;

  .state {
    width: 20%;
    min-width: 144px;
    float: left;
    margin-bottom: 3em;
    text-align: center;
    .name {
      color: #777;
    }
    &:hover .name {
      color: #555;
    }
  }
  .name {
    display: block;
    font-weight: bold;
    font-size: 18px;
  }
  .icon {
    display: block;
    font-family: statefaceregular;
    font-size: 6em;
    line-height: 1.5em;
  }
}

i.icon {
  width: 1em;
  height: 1em;
  background-size: 1em 1em;
  background-repeat: no-repeat;
  display: inline-block;
  position: relative;
  top: 2px;
}
i.icon-embed {
  background-image: url('../assets/icons/embed.png');
}
i.icon-link {
  background-image: url('../assets/icons/ic_link_black_48dp.png');
}
i.icon-launch {
  background-image: url('../assets/icons/ic_launch_black_48dp.png');
}

.state-header {
  h2, h3 {
    color: @darkGray;
    text-align: center;
    margin: 0;
    padding: 0;
  }
  h2 {
    font-weight: 700;
    font-size: 24px;
    text-transform: uppercase;
    margin-bottom: 8px;
  }
}

.state-utils {
  position: relative;
  margin: 24px 0;
  height: 1em;
  text-transform: uppercase;

  ul, li {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }
  a {
    color: #555;
    &:hover {
      color: #343434;
    }
  }
  .embed-this-state {
    position: absolute;
    right: 0;
  }
  .show-all-states {
    position: absolute;
    left: 0;
  }
}

.player {
  position: relative;
  float: left;
  clear: both;
  margin: 0 0 40px 0;
  width: 100%;
  padding: 1em;
  border: 1em solid #339da1;

  ul {
    margin: 0;
    padding: 0;
    li {
      margin: 0;
      padding: 0;
      list-style-type: none;
    }
  }

  .player-utils {
    margin: 20px auto 0 auto;
    font-size: 20px;
    max-width: 400px;

    li {
      font-size: 0.85em;
      margin: 0 0 8px 0;
      i { margin-right: 8px; }
      a {
        color: @darkGray;
        &:hover {
          color: @lightGray;
        }
      }
    }
  }

  .player-utils-xs {
    .player-utils {
      font-family: "Roboto Condensed", sans-serif;
      font-weight: 300;
      font-size: 24px;
      margin: 24px auto 0 auto;
    }
    li { margin: 18px 0; }
  }

  .player-name {
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: 400;
    font-size: 32px;
    margin-bottom: 4px;
    & > a {
      color: @darkGray;
    }
  }
  .player-image-container {
    float: left;
    width: 30%;
    margin-right: 2.5%;
    /*text-align: center;*/
    img {
      max-width: 100%;
    }
  }
  .player-stats {
    width: 60%;
    float: left;

    h2,
    .city-state,
    .title-business {
      text-align: center;
    }

    .city-state,
    .title-business {
      font-family: 'Roboto Condensed', sans-serif;
      font-weight: 300;
      font-size: 18px;
      margin: 4px 0;
      padding: 0;
    }

    h3 {
      font-family: 'Roboto Condensed', sans-serif;
      font-weight: 400;
      color: #484848;
    }

    .contributions {
      margin-top: 20px;
      h3 {
        display: inline-block;
        margin: 0;
      }
      span {
        font-family: "Roboto Condensed", sans-serif;
        font-weight: 400;
        font-size: 24px;
        color: #484848;
      }
    }

    .recipients {
      width: 100%;
      float: left;
      margin: 0;

      h3 {
        margin-bottom: 8px;
      }
      p, ol, li {
        margin: 0;
        padding: 0;
      }
      ol {
        margin-left: 22px;
      }
      li {
        margin-bottom: 0.5em;
      }
      .currency {
        float: right;
      }
    }
  }
  .donation-breakdown {
    float: left;
    width: 100%;
    margin-bottom: 32px;
    h3 {
      margin-top: 20px;
      margin-bottom: 8px;
    }
    ul {
      li {
        margin: 0 10px 0 0;
        float: left;
        font-size: 14px;

        .square {
          display: inline-block;
          width: 14px;
          height: 14px;
          margin: 0 4px 0 0;
        }
        &.in-state .square { background: #8d8480; }
        &.out-of-state .square { background: #F8E66D; }
        &.federal .square { background: #2E7294; }
      }
    }
    .location-container {
        clear: both;
        margin-top: 20px;
        height: 30px;
    }
    .state-location,
    .federal-location {
        text-align: center;
        height: 30px;
        display: inline-block;
    }
    .state-location .bar,
    .federal-location .bar {
        height: 30px;
        width: 100%;
        &:hover {
            cursor: pointer;
        }
    }
    .state-location .bar {
        background-color: #8d8480;
    }
    .federal-location .bar {
        background-color: #2E7294;
    }

    .amount {
        position: relative;
    }
    .amount-top {
        position: absolute;
        width: 0;
        height: 16px;
        top: 0;
        left: 50%;
        margin-left: 0;
        border-left: 1px solid @darkGray;
    }
    .amount-inner {
        max-width: 200px;
        padding: 4px 0;
        color: #343434;
        text-align: center;
        text-decoration: none;
        background-color: transparent;
        border-radius: 4px;
        font-size: 16px;
        margin: 0 auto;
        position: relative;
        top: 12px;
    }
  }
}

.embed-modal {
    textarea {
        width: 100%;
        min-height: 230px;
    }
}

.copy-url-modal {
    input { width: 100%; }
}

/* Invidual player embeds */
body.embed {
  .player {
    margin: 0;
  }
  .an-inn-newsapp {
    margin: 8px 4px 8px 0;
    float: right;
    a {
      color: #343434;
      &:hover {
        color: #555;
      }
    }
  }
  .player {
    margin: 24px 0;
    &:first-child {
      margin-top: 0;
    }
    &:last-child {
      margin-bottom: 0;
    }
  }
}

/* Media queries */
@media (max-width: 767px) {
  #select-a-state {
    .state {
      width: 25%;
    }
  }
  .player {
    .player-image-container {
      width: 100%;
      margin-right: 5%;
      text-align: center;
    }
    .player-stats {
      width: 100%;
      margin: 0 auto;
      max-width: 400px;
      float: none;
    }
  }
  .about-data-and-sources,
  #intro-copy {
    margin: 20px 10%;
    width: 80%;
  }
}

@media (max-width: 600px) {
  #select-a-state {
    .state {
      width: 33%;
    }
  }
  .state-utils {
    position: relative;
    margin: 24px 0;
    height: auto;
    text-transform: uppercase;
    text-align: center;

    li {
      margin: 0 0 0.5em 0;
    }

    .show-all-states,
    .embed-this-state {
      position: relative;
    }
  }
  .modal-dialog {
    position: absolute;
    bottom: 0;
    width: 95%;
    margin: 2.5%;
  }
}

@media (max-width: 480px) {
  #select-a-state {
    .state {
      width: 50%;
    }
  }
  .player {
    border: 0.85em solid #339da1;
    .player-stats {
      h3 {
          font-size: 1.25em;
      }
      .contributions {
        h3 {
          margin-bottom: 8px;
        }
      }

      .recipients {
        li {
          margin-bottom: 10px;
        }
        span { display: block; }
        .recipient,
        .currency {
          float: none;
        }
        .currency {
          font-weight: bold;
        }
      }
    }
    .donation-breakdown.two-bars {
      margin-bottom: 60px;
      .federal-location {
        .amount-top {
          height: 38px;
        }
        .amount-inner {
          top: 34px;
        }
      }
    }
  }
  .about-data-and-sources,
  #intro-copy {
    margin: 20px 5%;
    width: 90%;
  }
}

@media (max-width: 320px) {
  #select-a-state {
    .state {
      width: 100%;
      margin-bottom: 1em;
    }
  }
}

